# yaak

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml  sponsors.yml
plugins/action-copy-curl/: README.md  package.json
plugins/action-copy-grpcurl/: README.md  package.json
plugins/auth-apikey/: package.json
plugins/auth-aws/: README.md  package.json
plugins/auth-basic/: README.md  package.json
plugins/auth-bearer/: package.json
plugins/auth-jwt/: README.md  package.json
plugins/auth-oauth2/: README.md  package.json
plugins/filter-jsonpath/: package.json
plugins/filter-xpath/: package.json
plugins/importer-curl/: package.json
plugins/importer-insomnia/: package.json
plugins/importer-openapi/: package.json
plugins/importer-postman/: package.json
plugins/importer-postman-environment/: package.json
plugins/importer-yaak/: package.json
plugins/template-function-cookie/: package.json
plugins/template-function-datetime/: package.json
plugins/template-function-encode/: package.json
plugins/template-function-fs/: package.json
plugins/template-function-hash/: package.json
plugins/template-function-json/: package.json
plugins/template-function-prompt/: package.json
plugins/template-function-regex/: package.json
plugins/template-function-request/: package.json
plugins/template-function-response/: package.json
plugins/template-function-timestamp/: package.json
plugins/template-function-uuid/: package.json
plugins/template-function-xml/: package.json
plugins/themes-yaak/: package.json
scripts/: vendor-node.cjs
src-tauri/: Cargo.toml  package.json  tauri.commercial.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.release.conf.json
src-tauri/bindings/: index.ts
src-tauri/capabilities/: capabilities.json  default.json
src-tauri/src/: dns.rs  encoding.rs  error.rs  grpc.rs  history.rs  http_request.rs  import.rs  lib.rs  notifications.rs  plugin_events.rs  render.rs  updates.rs  uri_scheme.rs  window.rs  window_menu.rs
src-tauri/yaak-crypto/: Cargo.toml
src-tauri/yaak-git/bindings/: gen_models.ts
src-tauri/yaak-git/src/: git.rs  util.rs
src-tauri/yaak-grpc/src/: transport.rs
src-tauri/yaak-http/src/: tls.rs
src-tauri/yaak-license/: index.ts
src-tauri/yaak-license/src/: license.rs
src-tauri/yaak-models/: Cargo.toml
src-tauri/yaak-models/bindings/: gen_models.ts
src-tauri/yaak-models/guest-js/: store.ts
src-tauri/yaak-models/src/: db_context.rs  error.rs  migrate.rs  models.rs  query_manager.rs  render.rs  util.rs
src-tauri/yaak-models/src/queries/: any_request.rs  environments.rs  folders.rs  http_requests.rs  key_values.rs  mod.rs  settings.rs
src-tauri/yaak-plugins/: Cargo.toml  build.rs  index.ts
src-tauri/yaak-plugins/bindings/: gen_events.ts  gen_models.ts
src-tauri/yaak-plugins/permissions/: default.toml
src-tauri/yaak-plugins/src/: api.rs  commands.rs  error.rs  events.rs  install.rs  lib.rs  manager.rs  native_template_functions.rs  nodejs.rs  plugin_handle.rs  template_callback.rs
src-tauri/yaak-sync/: Cargo.toml
src-tauri/yaak-sync/bindings/: gen_models.ts
src-tauri/yaak-sync/src/: models.rs
src-tauri/yaak-templates/: Cargo.toml  index.ts
src-tauri/yaak-templates/src/: format.rs  format_xml.rs  lib.rs  parser.rs  renderer.rs  wasm.rs
src-tauri/yaak-ws/: Cargo.toml
src-tauri/yaak-ws/src/: commands.rs  connect.rs  render.rs
src-web/: main.css  main.tsx  modules.d.ts  package.json  tailwind.config.cjs  vite.config.ts
src-web/commands/: commands.tsx  createEnvironment.ts  createEnvironment.tsx  moveToWorkspace.tsx  openFolderSettings.tsx  openSettings.tsx  openWorkspaceSettings.tsx
src-web/components/: CargoFeature.tsx  ColorIndicator.tsx  CommandPaletteDialog.tsx  ConfirmLargeResponse.tsx  CreateEnvironmentDialog.tsx  DropMarker.tsx  DynamicForm.tsx  EmptyStateText.tsx  EnvironmentActionsDropdown.tsx  EnvironmentColorIndicator.tsx  EnvironmentColorPicker.tsx  EnvironmentEditDialog.tsx  EnvironmentEditor.tsx  EnvironmentSharableTooltip.tsx  ErrorBoundary.tsx  ExportDataDialog.tsx  FolderLayout.tsx  FolderSettingsDialog.tsx  GlobalHooks.tsx  GrpcConnectionLayout.tsx  GrpcEditor.tsx  GrpcProtoSelectionDialog.tsx  GrpcRequestPane.tsx  GrpcResponsePane.tsx  HeaderSize.tsx  HeadersEditor.tsx  HttpAuthenticationEditor.tsx  HttpRequestLayout.tsx  HttpRequestPane.tsx  HttpResponsePane.tsx  LicenseBadge.tsx  LocalImage.tsx  Markdown.tsx  MarkdownEditor.tsx  NewSidebar.tsx  Overlay.tsx  Prose.css  RecentHttpResponsesDropdown.tsx  RecentRequestsDropdown.tsx  RedirectToLatestWorkspace.tsx  (+17 more)
src-web/hooks/: useActiveEnvironmentVariables.ts  useActiveFolder.ts  useActiveFolderId.ts  useActiveRequestId.ts  useAuthTab.tsx  useHotKey.ts  (+25 more)
(+144 files in other folders)
